--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   table_calendar: ^2.3.0
   cached_network_image: ^2.2.0+1
   material_design_icons_flutter: 4.0.5755
+  path_provider: ^1.6.24
+  barcode_scan: ^2.0.1
+# firebase_ml_vision: ^0.9.10
+  qr_flutter: ^3.2.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
